fix spacing

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
  text-align: right;
  position: fixed;
  font-size: 12px
- letter-spacing: 1.2;
+ letter-spacing: 1.2px;
  padding: 10px;
  z-index: 10;
  background-color: #e45858;
@@ -35,7 +35,7 @@ header {
 }
 
 nav a {
- padding: 5px; 
+ padding: 0 15px; 
  display: inline;
  color: #232946;
  text-decoration: none;
@@ -51,8 +51,8 @@ h1 {
   font-size: 36px;
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 1.2;
-  margin-bottom: 10px;
+  letter-spacing: .6px;
+  margin-bottom: 20px;
 
 }
 
